- Renamed and namespaced all classes following PSR-0 standard to be PHP 5.3 compatible - Amended tests accordingly - Moved files into the right folder structure - Added test runner with custom PSR-0 compliant autoloader - Amended file and class comments blocks - Renamed Riak client container - Amended Travis yaml file to locate the new test runner - Removed PHP 5.2 from Travis yaml because not supported

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: "php"
 
-script: "php -q unit_tests.php"
+script: "php -q tests/Integration/test.php"
 
 notifications:
   irc: "irc.freenode.org#riak-php-client"
   email: "marco.debo.debortoli@gmail.com"
 
 php:
-  - "5.2"
   - "5.3"
   - "5.4"
