--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: "php"
 
-script: "php -q tests/Integration/test.php"
+script: "php -q tests/integration/test.php"
 
 notifications:
   irc: "irc.freenode.org#riak-php-client"
