--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ language: "php"
 script: "php -q tests/integration/test.php"
 
 notifications:
+  webhooks: http://basho-engbot.herokuapp.com/travis?key=8d594c660ec46f616e37e24fd941c0ea1fc67963
+  email: "eng@basho.com"
   irc: "irc.freenode.org#riak-php-client"
-  email: "marco.debo.debortoli@gmail.com"
 
 php:
   - "5.3"
