--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,26 @@
 {
     "name": "basho/riak",
-    "description": "Official Riak PHP client for PHP 5.3",
+    "description": "Official Riak client for PHP",
     "keywords": ["riak", "client", "driver", "database", "nosql"],
     "homepage": "http://basho.com/riak/",
     "license": "Apache-2.0",
     "authors": [
         {
-            "name": "Riak Team",
+            "name": "Riak Team & Contributors",
             "homepage": "https://github.com/basho/riak-php-client/contributors"
         }
     ],
     "autoload": {
-        "psr-0": { "Basho": "src/" }
+        "psr-4": {"Basho\\": "src/"}
     },
     "require": {
-        "php": ">=5.3.0",
+        "centraldesktop/protobuf-php": "0.6.*",
+        "php": ">=5.4",
+        "ext-json": "*",
+        "ext-mbstring": "*",
         "ext-curl": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "4.3.1"
     }
 }
