Updated composer.json with socket client lib. Fleshed out the main class a bunch including node selection and creating the connection. Expanding the command structure a bit more. Adding the proto files. Updated the gitignore.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "php": ">=5.4",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "react/socket-client": "0.4.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.3.1"
