--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: "php"
-
-script: "php -q tests/integration/test.php"
-
+install:
+  - composer install
 notifications:
   webhooks: http://basho-engbot.herokuapp.com/travis?key=8d594c660ec46f616e37e24fd941c0ea1fc67963
-  email: "eng@basho.com"
-  irc: "irc.freenode.org#riak-php-client"
-
+  email: "clients@basho.com"
 php:
   - "5.3"
   - "5.4"
-
 services:
   - "riak"
+script: "php -q tests/integration/test.php"
