--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -24,7 +24,7 @@
 
     <filter>
         <whitelist>
-            <directory>./src</directory>
+            <directory>./src/Basho/Riak</directory>
         </whitelist>
     </filter>
 </phpunit>
