--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,14 @@ install:
     - composer self-update
     - composer --prefer-source --dev install
 
+before_script:
+    - riak-admin bucket-type create counters '{"props":{"datatype":"counter"}}'
+    - riak-admin bucket-type create maps '{"props":{"datatype":"map"}}'
+    - riak-admin bucket-type create sets '{"props":{"datatype":"set"}}'
+    - riak-admin bucket-type activate counters
+    - riak-admin bucket-type activate maps
+    - riak-admin bucket-type activate sets
+
 script:
     - ./vendor/bin/phpunit -v --coverage-clover ./build/logs/clover.xml
     - ./vendor/bin/phpcs -p --extensions=php  --standard=ruleset.xml src --ignore=src/Riak/*,src/Riak.php
