--- a/.travis.yml
+++ b/.travis.yml
@@ -17,12 +17,7 @@ install:
     - composer --prefer-source --dev install
 
 before_script:
-    - riak-admin bucket-type create counters '{"props":{"datatype":"counter"}}'
-    - riak-admin bucket-type create maps '{"props":{"datatype":"map"}}'
-    - riak-admin bucket-type create sets '{"props":{"datatype":"set"}}'
-    - riak-admin bucket-type activate counters
-    - riak-admin bucket-type activate maps
-    - riak-admin bucket-type activate sets
+    - ./tests/travis/setup-riak.sh
 
 script:
     - ./vendor/bin/phpunit -v --coverage-clover ./build/logs/clover.xml
