--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ before_script:
 
 script:
     - ./vendor/bin/phpunit -v --coverage-clover ./build/logs/clover.xml
-    - ./vendor/bin/phpcs -p --extensions=php  --standard=ruleset.xml src --ignore=src/Riak/*,src/Riak.php
+    - ./vendor/bin/phpcs -p --extensions=php  --standard=ruleset.xml src/Basho
+    - ./vendor/bin/apigen generate -s src -d build/api --title "Riak PHP Client" --template-theme bootstrap
 
 after_script:
     - php ./vendor/bin/coveralls -v
