--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "phpunit/phpunit":                       "~4",
+        "apigen/apigen":                         "~4",
         "instaclick/coding-standard":            "~1.1",
         "squizlabs/php_codesniffer":             "~1.5",
         "satooshi/php-coveralls":                "~0.6.1",
