--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ before_script:
 script:
     - ./vendor/bin/phpunit -v --coverage-clover ./build/logs/clover.xml
     - ./vendor/bin/phpcs -p --extensions=php  --standard=ruleset.xml src/Basho
-    - ./vendor/bin/apigen generate -s src -d build/api --title "Riak PHP Client" --template-theme bootstrap
 
 after_script:
     - php ./vendor/bin/coveralls -v
+    - php ./vendor/bin/apigen generate -s src -d build/api --title "Riak PHP Client" --template-theme bootstrap
 
 matrix:
   allow_failures:
