--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
-
 {
     "name":         "basho/riak",
     "license":      "Apache-2.0",
     "homepage":     "http://basho.com/riak/",
-    "description":  "Official Riak PHP client for PHP 5.3",
+    "description":  "Official Riak PHP client for PHP 5.4",
     "keywords":     ["riak", "client", "driver", "database", "nosql"],
+    "minimum-stability": "dev",
     "authors": [
         {
             "name":     "Riak Team & Contributors",
@@ -24,6 +24,8 @@
         "apigen/apigen":                         "~4",
         "instaclick/coding-standard":            "~1.1",
         "squizlabs/php_codesniffer":             "~1.5",
+        "fbs/riak-pb":                           "~2.0",
+        "react/socket-client":                   "~0.4",
         "satooshi/php-coveralls":                "~0.6.1",
         "instaclick/object-calisthenics-sniffs": "dev-master",
         "instaclick/symfony2-coding-standard":   "dev-remaster"
