run tests with proto buf

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ before_script:
     - ./tests/travis/setup-riak.sh
 
 script:
-    - ./vendor/bin/phpunit -v --coverage-clover ./build/logs/clover.xml
+    - RIAK_NODE_URI='http://127.0.0.1:8098' ./vendor/bin/phpunit -v --coverage-clover ./build/logs/clover.xml
+    - RIAK_NODE_URI='proto://127.0.0.1:8087' ./vendor/bin/phpunit -v --coverage-clover ./build/logs/clover.xml
     - ./vendor/bin/phpcs -p --extensions=php  --standard=ruleset.xml src/Basho
 
 after_script:
