--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "ext-curl": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.3.*"
+        "phpunit/phpunit": "4.3.*",
+        "pimple/pimple": "~3.0"
     }
 }
