--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,10 @@
     "require": {
         "php": ">=5.4",
         "ext-json": "*",
-        "ext-mbstring": "*",
         "ext-curl": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.3.*",
+      "phpunit/phpunit": "~4.5",
         "pimple/pimple": "~3.0"
     }
 }
