--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
     },
     "require-dev": {
       "phpunit/phpunit": "~4.5",
-        "pimple/pimple": "~3.0"
+      "phpdocumentor/phpdocumentor": "2.*"
     }
 }
