--- a/.travis.yml
+++ b/.travis.yml
@@ -16,16 +16,16 @@ addons:
 before_script:
   - composer self-update
   - composer install --prefer-source
-  - riak-admin bucket-type create phptest_counters '{"props":{"datatype":"counter"}}'
-  - riak-admin bucket-type create phptest_maps '{"props":{"datatype":"map"}}'
-  - riak-admin bucket-type create phptest_sets '{"props":{"datatype":"set"}}'
-  - riak-admin bucket-type create phptest_search '{"props":{}}'
-  - riak-admin bucket-type create phptest_leveldb '{"props":{"backend":"leveldb_backend"}}'
-  - riak-admin bucket-type activate phptest_counters
-  - riak-admin bucket-type activate phptest_maps
-  - riak-admin bucket-type activate phptest_sets
-  - riak-admin bucket-type activate phptest_search
-  - riak-admin bucket-type activate phptest_leveldb
+  - sudo riak-admin bucket-type create phptest_counters '{"props":{"datatype":"counter"}}'
+  - sudo riak-admin bucket-type create phptest_maps '{"props":{"datatype":"map"}}'
+  - sudo riak-admin bucket-type create phptest_sets '{"props":{"datatype":"set"}}'
+  - sudo riak-admin bucket-type create phptest_search '{"props":{}}'
+  - sudo riak-admin bucket-type create phptest_leveldb '{"props":{"backend":"leveldb_backend"}}'
+  - sudo riak-admin bucket-type activate phptest_counters
+  - sudo riak-admin bucket-type activate phptest_maps
+  - sudo riak-admin bucket-type activate phptest_sets
+  - sudo riak-admin bucket-type activate phptest_search
+  - sudo riak-admin bucket-type activate phptest_leveldb
 
 notifications:
   webhooks: http://basho-engbot.herokuapp.com/travis?key=8d594c660ec46f616e37e24fd941c0ea1fc67963
