add baseUrl to api docs config

--- a/apigen.neon
+++ b/apigen.neon
@@ -9,3 +9,5 @@ templateTheme:  bootstrap
 title:          Official Riak Client for PHP
 
 tree:           true
+
+baseUrl:       https://basho.github.io/riak-php-client/
