--- a/.travis.yml
+++ b/.travis.yml
@@ -1,59 +1,26 @@
 language: php
-
 php:
-  - 5.4
-  - 5.5
-  - 5.6
-  - 7.0
-  - 7.1
-
+- 5.4
+- 5.5
+- 5.6
+- 7.0
+- 7.1
 sudo: required
-
 dist: trusty
-
 addons:
   hosts:
-    - riak-test
-
+  - riak-test
 before_script:
-  - composer self-update
-  - composer install --prefer-source
-  - curl -s https://packagecloud.io/install/repositories/basho/riak/script.deb.sh | sudo bash
-  - sudo apt-get install riak=2.1.4-1
-  - echo 'search = on' | sudo tee -a /etc/riak/riak.conf
-  - echo 'nodename = riak@127.0.0.1' | sudo tee -a /etc/riak/riak.conf
-  - echo 'storage_backend = multi' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.default = leveldb_backend' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.bitcask_backend.storage_backend = bitcask' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.bitcask_backend.bitcask.data_root = $(platform_data_dir)/bitcask' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.bitcask_backend.bitcask.io_mode = erlang' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.leveldb_backend.storage_backend = leveldb' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.leveldb_backend.leveldb.data_root = $(platform_data_dir)/leveldb' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.leveldb_backend.leveldb.maximum_memory.percent = 30' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.mem_backend.storage_backend = memory' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.mem_backend.memory_backend.ttl = 10s' | sudo tee -a /etc/riak/riak.conf
-  - echo 'multi_backend.mem_backend.memory_backend.max_memory_per_vnode = 4MB' | sudo tee -a /etc/riak/riak.conf
-  - sudo riak start
-  - sudo riak-admin bucket-type create phptest_counters '{"props":{"datatype":"counter"}}'
-  - sudo riak-admin bucket-type create phptest_maps '{"props":{"datatype":"map"}}'
-  - sudo riak-admin bucket-type create phptest_sets '{"props":{"datatype":"set"}}'
-  - sudo riak-admin bucket-type create phptest_search '{"props":{}}'
-  - sudo riak-admin bucket-type create phptest_leveldb '{"props":{"backend":"leveldb_backend"}}'
-  - sudo riak-admin bucket-type activate phptest_counters
-  - sudo riak-admin bucket-type activate phptest_maps
-  - sudo riak-admin bucket-type activate phptest_sets
-  - sudo riak-admin bucket-type activate phptest_search
-  - sudo riak-admin bucket-type activate phptest_leveldb
-
+- phpenv config-rm xdebug.ini
+- composer self-update
+- composer install --prefer-source
+- sudo ./tools/travis-ci/riak-install
+- sudo ./tools/devrel/riak-cluster-config "$(which riak-admin)" 8098 false false
+- riak version
 notifications:
-  webhooks: http://basho-engbot.herokuapp.com/travis?key=8d594c660ec46f616e37e24fd941c0ea1fc67963
-  email: clients@basho.com
   slack:
-    secure: 1i+11wGT6fqJvR+7dWCC449HrxnB+2UvEReZQe/PretyiqY0+qjNWXA9+7rc8tjPfkAJpD89lDzekcFYQwTrsouliNM4FK7Ibb5n4iNjHww4KTFn8lnB2Ywy5wwex7L55kDrNgYrNaqcSoJcXDDlFJpsXZKo/Yaq0/w4Wu8cyCU=
-
+    secure: ZtgcjTxhTxrzWW6MIHLRtucW/BMm42RKS3nGRtSfgER9rx7oJ0Y9gOYkh1FM0GsM7Z11Q/iDhWs/8WTccAV0PrMZ6KHaq54wGmfYyqwPM4YreUwQ87PnOW4wZbl0TJTeWutasEwZvnVJ8VEyyQcS2PHt0zlsENn0XWvobvaZ+FM=
 script: "./vendor/bin/phpunit --coverage-text"
-
 matrix:
   allow_failures:
-    - php: 7.1
-
+  - php: 7.1
