Update tools/ to 1.0.3, add Makefile
run integration and security tests in Travis

no need to disable security twice

use submodule

remove tools/ from composer.json

Add security-tests suite

Modify test target

--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,9 @@ vendor
 composer.lock
 
 # ignore mac files
-.DS_Store
+.DS_Store/
 
-# ignore generated docs
 docs
 
-# ignore composer.phar file
+composer
 composer.phar
