--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,12 @@ before_script:
   - composer self-update
   - composer install --prefer-source
   - sudo ./tools/travis-ci/riak-install -d "$RIAK_DOWNLOAD_URL"
-  - sudo ./tools/devrel/riak-cluster-config "$(which riak-admin)" 8098 false false
+  - sudo ./tools/setup-riak -s
+script:
+  - sudo riak-admin security disable
+  - make test
+  - sudo riak-admin security enable
+  - make security-test
 notifications:
   slack:
     secure: ZtgcjTxhTxrzWW6MIHLRtucW/BMm42RKS3nGRtSfgER9rx7oJ0Y9gOYkh1FM0GsM7Z11Q/iDhWs/8WTccAV0PrMZ6KHaq54wGmfYyqwPM4YreUwQ87PnOW4wZbl0TJTeWutasEwZvnVJ8VEyyQcS2PHt0zlsENn0XWvobvaZ+FM=
-script: "./vendor/bin/phpunit --coverage-text"
