--- a/composer.json
+++ b/composer.json
@@ -39,19 +39,6 @@
   "support": {
     "issues": "https://github.com/basho/riak-php-client/issues"
   },
-  "repositories": [
-    {
-      "type": "package",
-      "package": {
-        "name": "basho/tools",
-        "version": "1.0.0",
-        "dist": {
-          "url": "https://github.com/basho/riak-client-tools/archive/master.zip",
-          "type": "zip"
-        }
-      }
-    }
-  ],
   "require": {
     "php": ">=5.4",
     "ext-json": "*",
@@ -59,7 +46,6 @@
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.*",
-    "apigen/apigen": "4.1.*",
-    "basho/tools": "1.0.0"
+    "apigen/apigen": "4.1.*"
   }
 }
